66. Adding method for adding a new recipe with ingredients to the database as many to many 67. Fixed client-side ingredient default values and recipe creator validation 68. Changed the conversion of the nutritional value of the added ingredient in 100 grams - from now on, the values are converted to the weight taken 69. Hidden vulnerable connectionstring from config.json to user secrets 70. Added new get endpoint 'RandomGuid' to bind client recipe interface with image added during recipe preparation

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -51,6 +51,22 @@ mat-divider {
     }
 
 
+#addRecipeBtn {
+    color: #eeeeee;
+    background-color: #000000;
+    border: solid 1px #eeeeee;
+    min-height: 38px !important;
+}
+
+
+    #addRecipeBtn:hover,
+    #addRecipeBtn:focus {
+        color: #eeeeee !important;
+        border-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+
+
 /* PLACEHOLDER COLOR */
 .mat-form-field-outline, .mat-form-field-empty.mat-form-field-label, .mat-form-field-label, .mat-form-field-underline, .mat-input-element, ::placeholder
 {
