--- a/client/src/app/views/recipeCreator.component.html
+++ b/client/src/app/views/recipeCreator.component.html
@@ -3,6 +3,32 @@
     <mat-divider></mat-divider>
     <br>
 
+
+    <!-- NAZWA PRZEPISU -->
+    <form class="col col-10 col-md-9 p-2 m-0 d-inline-block">
+        <mat-form-field>
+            <input type="text" name="recipeName" [(ngModel)]="recipeName" matInput placeholder="Recipe name" />
+        </mat-form-field>
+    </form>
+
+
+    <!-- PRZYCISK DODAWANIA PRZEPISU -->
+    <div class="col col-2 col-md-3 p-0 m-0 d-inline-block">
+        <button class="btn btn-light btn-block" id="addRecipeBtn" (click)="addRecipe()"><fa-icon [icon]="faPlus"></fa-icon></button>
+    </div>
+
+
+    <!-- OPIS PRZYGOTOWANIA PRZEPISU -->
+    <div class="col col-12 p-0 m-0">
+        <mat-form-field class="input-field">
+            <textarea class=" text-dark" matInput name="recipeDesc" cols="100" rows="5"
+                      placeholder="Recipe preparation description" [(ngModel)]="recipeDesc"
+                      required></textarea>
+        </mat-form-field>
+    </div>
+
+
+    <!-- TABELA SKŁADNIKÓW PRZEPISU -->
     <div class="card table-responsive p-0 m-0 col-12">
         <table id="recipeTable" mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
                class="mat-elevation-z8 p-0 m-0 col-12">
@@ -61,6 +87,7 @@
 
 
 
+            <!-- PRZYCISKI FUNKCYJNE -->
             <!-- Edit, Delete -->
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef></mat-header-cell>
@@ -84,8 +111,9 @@
 
 
 
+    <!-- ZDJĘCIE PRZEPISU -->
     <!-- Image upload -->
-    <div class="row mt-3">
+    <div class="row mt-3 pb-2">
         <div class="col">
             <div class="custom-file">
                 <input type="file" accept="image/*" class="custom-file-input" id="customFile" (change)="handleFileInput($any($event.target).files)" [disabled]="working">
@@ -96,14 +124,14 @@
             <button type="button" class="btn btn-light btn-block" ngbTooltip="Upload" (click)="upload()" [disabled]="working">Upload</button>
         </div>
     </div>
-    <div class="row mt-3" *ngIf="working">
+    <div class="row mt-3 pb-2" *ngIf="working">
         <div class="col">
             <div class="progress">
                 <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploadProgress + '%' }" [attr.aria-valuenow]="uploadProgress" aria-valuemin="0" aria-valuemax="100">{{ uploadProgress }}%</div>
             </div>
         </div>
     </div>
-    <div class="row col-12 mt-3 m-0 p-0" *ngIf="uploadUrl?.length">
+    <div class="row col-12 mt-3 m-0 p-0 pb-2" *ngIf="uploadUrl?.length">
         <img [src]="uploadUrl" alt="preview" class="rounded shadow col-12 m-0 p-0">
     </div>
 </div>
